--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 #utf setting
-set-window-option -g utf8 on
+#set-window-option -g utf8 on
 set-window-option -g mode-keys vi
 set-window-option -g automatic-rename off
 
@@ -7,7 +7,7 @@ set-window-option -g automatic-rename off
 # set -g status-fg black
 
 set -s escape-time 0
-setw -g window-status-current-attr underscore
+#setw -g window-status-current-attr underscore
 
 # 256色ターミナル
 set-option -g default-terminal "screen-256color"
@@ -16,8 +16,8 @@ set-option -g default-terminal "screen-256color"
 #set -g pane-active-border-fg white
 #set -g pane-active-border-bg black
 
-set-window-option -g mode-bg white
-set-window-option -g mode-fg black
+#set-window-option -g mode-bg white
+#set-window-option -g mode-fg black
 #set-window-option -g window-status-bg black
 #set-window-option -g window-status-fg white
 #set-window-option -g window-status-current-bg blue
@@ -122,8 +122,8 @@ unbind '"'
 bind '"' choose-window
 
 ## pane border
-set -g pane-border-fg colour245
-set -g pane-active-border-fg colour39
+#set -g pane-border-fg colour245
+#set -g pane-active-border-fg colour39
 
 # status line
 set -g status-fg white
@@ -141,9 +141,9 @@ set -g window-status-current-format "#[fg=white,bg=colour237] #I #W #F "
 set -g status-right-length 150
 set -g status-right '#[fg=colour244]%Y/%m/%d(%a) %H:%M:%S '
 ## message
-set -g message-attr bold
-set -g message-fg white
-set -g message-bg red
+#set -g message-attr bold
+#set -g message-fg white
+#set -g message-bg red
 
 # canything
 bind-key b split-window 'tmux lsw | canything | cut -d":" -f 1 | xargs tmux select-window -t'
